--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,9 @@ logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 
 #H2 Configuration
 spring.h2.console.enabled=true
+spring.datasource.url=jdbc:mariadb://localhost:3307/os
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
